--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
 	<div class="container">
-		<canvas width="400" height="400" id="canvas"></canvas>
+		<canvas width="300" height="300" id="canvas"></canvas>
 	</div>
+	<script type="text/javascript" src="classes/Tools.js"></script>
 	<script type="text/javascript" src="classes/Vector.js"></script>
 	<script type="text/javascript" src="classes/Block.js"></script>
 	<script type="text/javascript" src="classes/FluidEngine.js"></script>
