--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 	<div class="container">
 		<canvas width="300" height="300" id="canvas"></canvas>
+		<p id="logs"></p>
 	</div>
 	<script type="text/javascript" src="classes/Tools.js"></script>
 	<script type="text/javascript" src="classes/Vector.js"></script>
